testrail/demo_testrail/integration_test_results/mere.log
********************
./tests/mere
*test.py
/home/chelu/all/testrail/demo_testrail
********************

Running tests...
----------------------------------------------------------------------
E
======================================================================
ERROR [0.000s]: tests.mere.mere_test (unittest.loader.ModuleImportFailure)
----------------------------------------------------------------------
ImportError: Failed to import test module: tests.mere.mere_test
Traceback (most recent call last):
  File "/usr/lib/python2.7/unittest/loader.py", line 254, in _find_tests
    module = self._get_module_from_name(name)
  File "/usr/lib/python2.7/unittest/loader.py", line 232, in _get_module_from_name
    __import__(name)
  File "/home/chelu/all/testrail/demo_testrail/tests/mere/mere_test.py", line 22
    self.assertTrue(test_nr % 2 == 0, "Number was: {0}".format(test_nr))
                                                                       ^
IndentationError: unindent does not match any outer indentation level


----------------------------------------------------------------------
Ran 1 test in 0.000s

FAILED (errors=1)

Generating XML reports...
